# internal/user/presentation/v1/handlers/demote_user_handler.go
@@ -41,7 +41,7 @@ func NewDemoteUserHandler(
 //	@Failure		400	{object}	ErrorResponse	"Invalid user ID format"
 //	@Failure		404	{object}	ErrorResponse	"User not found"
 //	@Failure		500	{object}	ErrorResponse	"Server error"
-//	@Router			/api/v1/users/{id}/demote [patch]
+//	@Router			/v1/users/{id}/demote [patch]
 func (handler *DemoteUserHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
