# internal/user/presentation/v1/handlers/remove_user_handler.go
@@ -41,7 +41,7 @@ func NewRemoveUserHandler(
 //	@Failure		400	{object}	ErrorResponse	"Invalid user ID format"
 //	@Failure		404	{object}	ErrorResponse	"User not found"
 //	@Failure		500	{object}	ErrorResponse	"Server error"
-//	@Router			/api/v1/users/{id} [delete]
+//	@Router			/v1/users/{id} [delete]
 func (handler *RemoveUserHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
